fixing related content scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -815,7 +815,6 @@ h3 {
   font-weight: 600;
   text-transform: uppercase;
   margin: 0;
-  background: #fff;
   letter-spacing: 1px;
 }
 .VideoList {
@@ -824,6 +823,7 @@ h3 {
     position: sticky;
     top: 189px;
     z-index: 2;
+    background: #fff;
   }
 }
 .vList {
@@ -1070,12 +1070,14 @@ h3 {
 }
 
 .Detail {
-  padding: 50px 0 50px 50px;
+  padding: 50px 0 0 50px;
   display: flex;
   justify-content: space-between;
 }
 .RelatedVideos{
   width: 290px;
+  height: 100vh;
+  overflow-y: scroll;
   padding-right: 50px;
   h3 {
     margin-bottom: 50px;
